--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -1,6 +1,6 @@
 schema: https://api.kulturspektakel.de/graphql
 documents:
-  - ./app/**/*.tsx
+  - ./src/**/*.tsx
 generates:
   ./app/types/graphql.ts:
     plugins:
