--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@graphql-codegen/typescript-operations": "^4.6.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.3",
     "@types/google.maps": "^3.58.1",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "dotenv-vault": "^1.27.0",
     "prettier": "^3.6.2",
-    "typescript": "^5.9.2",
-    "vercel": "^44.7.3",
+    "typescript": "^5.9.3",
+    "vercel": "^48.2.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
@@ -35,14 +35,15 @@
     "@apollo/client": "^3.13.9",
     "@apollo/client-integration-tanstack-start": "^0.12.3-alpha.5",
     "@badrap/bar-of-progress": "^0.3.0",
-    "@chakra-ui/react": "^3.19.1",
-    "@date-fns/tz": "^1.2.0",
+    "@chakra-ui/react": "^3.27.0",
+    "@date-fns/tz": "^1.4.1",
     "@emotion/react": "^11.14.0",
     "@googlemaps/react-wrapper": "^1.2.0",
-    "@prisma/client": "6.13.0",
-    "@tanstack/react-query": "^5.84.2",
-    "@tanstack/react-router": "^1.131.2",
-    "@tanstack/react-start": "^1.131.2",
+    "@prisma/client": "6.16.3",
+    "@tanstack/nitro-v2-vite-plugin": "^1.132.40",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-router": "^1.132.45",
+    "@tanstack/react-start": "^1.132.45",
     "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
     "date-fns": "^4.1.0",
@@ -52,22 +53,24 @@
     "graphql-scalars": "^1.24.2",
     "hex-rgb": "^5.0.0",
     "iban-ts": "^0.10.0",
-    "markdown-to-jsx": "^7.7.13",
+    "markdown-to-jsx": "^7.7.14",
     "markdown-to-txt": "^2.0.1",
     "next-themes": "^0.4.6",
     "photoswipe": "^5.4.4",
-    "prisma": "^6.13.0",
-    "react": "^19.1.1",
+    "prisma": "^6.16.3",
+    "react": "^19.2.0",
     "react-confetti": "^6.4.0",
     "react-countdown": "^2.3.6",
-    "react-dom": "^19.1.1",
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-photoswipe-gallery": "^3.1.1",
+    "react-photoswipe-gallery": "^4.0.0",
     "react-use": "^17.6.0",
+    "stripe": "^19.1.0",
     "tomo-typeahead": "^0.0.6",
-    "ts-ics": "^2.2.0",
-    "vite": "^7.1.1",
-    "zod": "^4.0.16",
-    "zod-formik-adapter": "^1.3.0"
+    "ts-ics": "^2.4.0",
+    "vite": "^7.1.9",
+    "zod": "^4.1.12",
+    "zod-formik-adapter": "^2.0.0"
   }
 }
