--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.32.0",
-    "@graphql-codegen/cli": "^5.0.7",
-    "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typescript-operations": "^4.6.1",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.3",
+    "@graphql-codegen/cli": "^6.1.1",
+    "@graphql-codegen/introspection": "^5.0.0",
+    "@graphql-codegen/typescript-operations": "^5.0.7",
+    "@graphql-codegen/typescript-react-apollo": "^4.4.0",
     "@types/google.maps": "^3.58.1",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.1.3",
-    "bufferutil": "^4.0.9",
+    "bufferutil": "^4.1.0",
     "dotenv-vault": "^1.27.0",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3",
-    "vercel": "^48.10.10",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4"
+    "vercel": "^50.13.2",
+    "vite-tsconfig-paths": "^6.0.5",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
@@ -42,7 +42,7 @@
     "@emotion/react": "^11.14.0",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@neondatabase/serverless": "^1.0.2",
-    "@prisma/adapter-neon": "^7.3.0",
+    "@prisma/adapter-neon": "6",
     "@prisma/client": "6.19.0",
     "@react-pdf/renderer": "^4.3.2",
     "@tanstack/nitro-v2-vite-plugin": "^1.154.7",
@@ -53,15 +53,15 @@
     "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
     "date-fns": "^4.1.0",
-    "downshift": "^9.0.10",
+    "downshift": "^9.2.0",
     "formik": "^2.4.9",
     "graphql": "^16.12.0",
     "graphql-scalars": "^1.25.0",
     "hex-rgb": "^5.0.0",
-    "iban-ts": "^0.10.1",
-    "markdown-to-jsx": "^8.0.0",
+    "iban-ts": "^0.11.0",
+    "markdown-to-jsx": "^9.7.3",
     "markdown-to-txt": "^2.0.1",
-    "n2words": "^1.23.1",
+    "n2words": "^3.1.0",
     "next-themes": "^0.4.6",
     "normalize-url": "^8.1.1",
     "photoswipe": "^5.4.4",
@@ -74,8 +74,8 @@
     "react-icons": "^5.5.0",
     "react-photoswipe-gallery": "^4.0.0",
     "react-use": "^17.6.0",
-    "react-use-facebook-pixel": "^1.0.7",
-    "stripe": "^19.3.1",
+    "react-use-facebook-pixel": "^2.0.0",
+    "stripe": "^20.3.1",
     "tomo-typeahead": "^0.0.6",
     "ts-ics": "^2.4.0",
     "vite": "^7.3.1",
