--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@emotion/react": "^11.14.0",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@neondatabase/serverless": "^1.0.2",
-    "@prisma/adapter-neon": "6",
-    "@prisma/client": "6.19.0",
+    "@prisma/adapter-neon": "7",
+    "@prisma/client": "7",
     "@react-pdf/renderer": "^4.3.2",
     "@tanstack/nitro-v2-vite-plugin": "^1.154.7",
     "@tanstack/react-query": "^5.90.20",
@@ -53,6 +53,7 @@
     "@twemoji/svg": "^15.0.0",
     "apollo-link-scalars": "^4.0.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.4",
     "downshift": "^9.2.0",
     "formik": "^2.4.9",
     "graphql": "^16.12.0",
@@ -65,7 +66,6 @@
     "next-themes": "^0.4.6",
     "normalize-url": "^8.1.1",
     "photoswipe": "^5.4.4",
-    "prisma": "^6.19.0",
     "react": "^19.2.4",
     "react-confetti": "^6.4.0",
     "react-countdown": "^2.3.6",
